# awesome-sql

./: .gitignore  .pre-commit-config.yaml  README-DESENVOLVIMENTO.md  README.md  database.py  main.py  pyproject.toml  requirements.txt
docs/: documentacao_faker.md  documentacao_mypy.md  documentacao_ruff.md  documentacao_sql.md
sql/: create_schema.sql  create_setup.sql
